Fix: Fix styling of the nav bar, fix spacing and font size

--- a/styles.css
+++ b/styles.css
@@ -338,43 +338,31 @@ body {
     margin-bottom: 80px;
 }
 
-.education-containers {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    align-items: center;
-}
-
 .education-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 80%;
     background: linear-gradient(264deg, #4169E1 -5.09%, #B923E1 106.28%);
     padding: 50px;
     border-radius: 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    gap: 20px;
 }
 
-.education-logo1 {
-    width: 50px; 
-    height: auto;
-    object-fit: contain;
-    margin-right: 20px;
-}
-
+.education-logo1, 
 .education-logo2 {
     width: 70px; 
     height: auto;
     object-fit: contain;
-    margin-right: 20px;
 }
 
 .education-info {
     display: flex;
-    flex-direction: column; /* Stacks the elements */
-    align-items: center; /* Centers the text elements */
-    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    max-width: 500px;
 }
 
 .education-school {
@@ -388,6 +376,7 @@ body {
     font-size: 18px;
     text-align: center;
 }
+
 
 
 .footer{
